; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_arb_program_shader.c_shader_arb_load_constants.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_arb_program_shader.c_shader_arb_load_constants.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_context = type { i32 }
%struct.wined3d_state = type { i32 }

@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.wined3d_context*, %struct.wined3d_state*)* @shader_arb_load_constants to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @shader_arb_load_constants(i8* %0, %struct.wined3d_context* %1, %struct.wined3d_state* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.wined3d_context*, align 8
  %6 = alloca %struct.wined3d_state*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.wined3d_context* %1, %struct.wined3d_context** %5, align 8
  store %struct.wined3d_state* %2, %struct.wined3d_state** %6, align 8
  %9 = load %struct.wined3d_state*, %struct.wined3d_state** %6, align 8
  %10 = call i32 @use_vs(%struct.wined3d_state* %9)
  store i32 %10, i32* %7, align 4
  %11 = load %struct.wined3d_state*, %struct.wined3d_state** %6, align 8
  %12 = call i32 @use_ps(%struct.wined3d_state* %11)
  store i32 %12, i32* %8, align 4
  %13 = load i8*, i8** %4, align 8
  %14 = load %struct.wined3d_context*, %struct.wined3d_context** %5, align 8
  %15 = load %struct.wined3d_state*, %struct.wined3d_state** %6, align 8
  %16 = load i32, i32* %8, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* @FALSE, align 4
  %19 = call i32 @shader_arb_load_constants_internal(i8* %13, %struct.wined3d_context* %14, %struct.wined3d_state* %15, i32 %16, i32 %17, i32 %18)
  ret void
}

declare dso_local i32 @use_vs(%struct.wined3d_state*) #1

declare dso_local i32 @use_ps(%struct.wined3d_state*) #1

declare dso_local i32 @shader_arb_load_constants_internal(i8*, %struct.wined3d_context*, %struct.wined3d_state*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
